squash: avoid centering for now due to ios

--- a/spot-client/src/common/css/page-layouts/_feedback-view.scss
+++ b/spot-client/src/common/css/page-layouts/_feedback-view.scss
@@ -6,7 +6,9 @@
 }
 
 .app-feedback-overlay {
-    justify-content: center;
+    .feedback-form {
+        margin-top: 5%
+    }
 
     .message-help {
         display: none
